# R-proj-2026

./:  index.html  .env.example  .gitignore  MODEL_ANALYSIS_REPORT.md  build.js  build_results.js  cleaning.R  fashion_trend.py  guide.md  main.py  model.R  package.json  pyproject.toml  script.js  styles.css
app/: globals.css  layout.tsx  page.tsx
app/api/predict/: route.ts
components/: FloatingBackground.tsx  Footer.tsx  GenderCategory.tsx  Hero.tsx  Navbar.tsx  PredictSection.tsx  PredictionPanel.tsx  ProductPanel.tsx  ResultsPanel.tsx  SmoothScroll.tsx
dataset/: DATASET_README.md
docs/: MODELING_METHODOLOGY.md  cleaning_docs.md  docs_prompt.txt  notebook_for_llm.md
graphs/: feature_importance_realistic.csv  metrics.json  model_realistic.joblib
lib/: hooks.ts  types.ts
nginx/: nginx.conf
public/data/: brands.json  categories.json
scripts/: extract_metadata.py  predict.py
